unpackaged/main/default/objects/Contract/fields/Actif__c.field-meta.xml
<CustomField>
    <fullName>Actif__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actif</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Contrats</relationshipLabel>
    <relationshipName>Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>