unpackaged/main/default/objects/Contract/fields/Agence_PF_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Agence_PF_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence PF</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contrats (Agence PF)</relationshipLabel>
    <relationshipName>Contrat_agence</relationshipName>
    <type>Lookup</type>
</CustomField>