unpackaged/main/default/objects/Contract/fields/Auvent_Information_complementaires__c.field-meta.xml
<CustomField>
    <fullName>Auvent_Information_complementaires__c</fullName>
    <inlineHelpText>Merci de préciser la Hauteur + l’avancée</inlineHelpText>
    <label>Si oui, précisez la hauteur + profondeur</label>
    <type>TextArea</type>
</CustomField>