unpackaged/main/default/objects/Contract/fields/Choc_en_Hauteur__c.field-meta.xml
<CustomField>
    <fullName>Choc_en_Hauteur__c</fullName>
    <label>Choc en Hauteur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>