unpackaged/main/default/objects/Contract/fields/Code_gestion__c.field-meta.xml
<CustomField>
    <fullName>Code_gestion__c</fullName>
    <label>Code gestion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>