unpackaged/main/default/objects/Contract/fields/Code_Societe_PF__c.field-meta.xml
<CustomField>
    <fullName>Code_Societe_PF__c</fullName>
    <label>Code Société PF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>