unpackaged/main/default/objects/Contract/fields/ContractName__c.field-meta.xml
<CustomField>
    <fullName>ContractName__c</fullName>
    <formula>Account.Name &amp; IF( MasterContract__c = true, &quot;_MasterContract_&quot;,&quot;_ContratLocation_&quot;)&amp;text(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>