unpackaged/main/default/objects/Contract/fields/Courrier_de_resiliation__c.field-meta.xml
<CustomField>
    <fullName>Courrier_de_resiliation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Courrier de résiliation</label>
    <type>Checkbox</type>
</CustomField>