unpackaged/main/default/objects/Contract/fields/Date_indexation__c.field-meta.xml
<CustomField>
    <fullName>Date_indexation__c</fullName>
    <label>Date d&#39;indexation</label>
    <type>Date</type>
</CustomField>