unpackaged/main/default/objects/Contract/fields/Dimension_Interieure_Utile__c.field-meta.xml
<CustomField>
    <fullName>Dimension_Interieure_Utile__c</fullName>
    <label>Dimension Intérieure Utile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>