unpackaged/main/default/objects/Contract/fields/Duree_contrat_type__c.field-meta.xml
<CustomField>
    <fullName>Duree_contrat_type__c</fullName>
    <label>Durée de contrat (type)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>CDM</fullName>
            </value>
            <value>
                <fullName>LD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>