unpackaged/main/default/objects/Contract/fields/Duree_unite__c.field-meta.xml
<CustomField>
    <fullName>Duree_unite__c</fullName>
    <label>Durée (unité)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>