unpackaged/main/default/objects/Contract/fields/Duree_valeur__c.field-meta.xml
<CustomField>
    <fullName>Duree_valeur__c</fullName>
    <label>Durée (valeur)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>