unpackaged/main/default/objects/Contract/fields/Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Date__c</fullName>
    <label>Date de prolongation</label>
    <type>Date</type>
</CustomField>