unpackaged/main/default/objects/Contract/fields/Facturation__c.field-meta.xml
<CustomField>
    <fullName>Facturation__c</fullName>
    <label>Facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FDM</fullName>
            </value>
            <value>
                <fullName>FFM</fullName>
            </value>
            <value>
                <fullName>CD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>