unpackaged/main/default/objects/Contract/fields/Format_de_facture__c.field-meta.xml
<CustomField>
    <fullName>Format_de_facture__c</fullName>
    <label>Format de facture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PDF signé</fullName>
            </value>
            <value>
                <fullName>Chorus</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>DEMAT</fullName>
            </value>
            <value>
                <fullName>EDI_ITALIE</fullName>
            </value>
            <value>
                <fullName>NON</fullName>
            </value>
            <value>
                <fullName>PDF_SIGNES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>