unpackaged/main/default/objects/Contract/fields/Horaire_souhaite__c.field-meta.xml
<CustomField>
    <fullName>Horaire_souhaite__c</fullName>
    <label>Horaire souhaité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Matin</fullName>
            </value>
            <value>
                <fullName>Après-midi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>