unpackaged/main/default/objects/Contract/fields/Id_contrat_Igloo__c.field-meta.xml
<CustomField>
    <fullName>Id_contrat_Igloo__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>ID Externe</description>
    <externalId>true</externalId>
    <label>Id contrat Igloo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>