unpackaged/main/default/objects/Contract/fields/IMMAT__c.field-meta.xml
<CustomField>
    <fullName>IMMAT__c</fullName>
    <formula>Actif__r.IMMAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMMAT</label>
    <type>Text</type>
</CustomField>