unpackaged/main/default/objects/Contract/fields/IndemnityAmount__c.field-meta.xml
<CustomField>
    <fullName>IndemnityAmount__c</fullName>
    <inlineHelpText>(Avant échéance)</inlineHelpText>
    <label>Montant de l&#39;indemnité de résiliation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>