unpackaged/main/default/objects/Contract/fields/InterruptionDate__c.field-meta.xml
<CustomField>
    <fullName>InterruptionDate__c</fullName>
    <label>Date d&#39;Interruption</label>
    <type>Date</type>
</CustomField>