unpackaged/main/default/objects/Contract/fields/KM_inclus__c.field-meta.xml
<CustomField>
    <fullName>KM_inclus__c</fullName>
    <label>KM inclus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>