unpackaged/main/default/objects/Contract/fields/Loyer_initial__c.field-meta.xml
<CustomField>
    <fullName>Loyer_initial__c</fullName>
    <label>Loyer initial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>