unpackaged/main/default/objects/Contract/fields/Loyer_initial_net__c.field-meta.xml
<CustomField>
    <fullName>Loyer_initial_net__c</fullName>
    <label>Loyer initial net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>