unpackaged/main/default/objects/Contract/fields/MasterContract__c.field-meta.xml
<CustomField>
    <fullName>MasterContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMasterContract</label>
    <type>Checkbox</type>
</CustomField>