unpackaged/main/default/objects/Contract/fields/Mise_en_portefeuille__c.field-meta.xml
<CustomField>
    <fullName>Mise_en_portefeuille__c</fullName>
    <label>Mise en portefeuille</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>