unpackaged/main/default/objects/Contract/fields/N_Client__c.field-meta.xml
<CustomField>
    <fullName>N_Client__c</fullName>
    <label>N° Client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>