unpackaged/main/default/objects/Contract/fields/Negociated_Rate__c.field-meta.xml
<CustomField>
    <fullName>Negociated_Rate__c</fullName>
    <label>Pourcentage Négocié</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>