unpackaged/main/default/objects/Contract/fields/Next_Date_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Next_Date_Uplift__c</fullName>
    <label>Prochaine date d&#39;indexation</label>
    <type>Date</type>
</CustomField>