unpackaged/main/default/objects/Contract/fields/Num_groupe_compensation__c.field-meta.xml
<CustomField>
    <fullName>Num_groupe_compensation__c</fullName>
    <label>Num groupe compensation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>