unpackaged/main/default/objects/Contract/fields/Numero_bon_commande_client__c.field-meta.xml
<CustomField>
    <fullName>Numero_bon_commande_client__c</fullName>
    <label>Numéro de bon de commande client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>