unpackaged/main/default/objects/Contract/fields/Numero_contrat_igloo__c.field-meta.xml
<CustomField>
    <fullName>Numero_contrat_igloo__c</fullName>
    <label>Numéro contrat igloo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>