unpackaged/main/default/objects/Contract/fields/Numero_de_parc_renouvele__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_parc_renouvele__c</fullName>
    <label>Numéro de parc renouvelé</label>
    <length>100</length>
    <type>Text</type>
</CustomField>