unpackaged/main/default/objects/Contract/fields/Obstacles__c.field-meta.xml
<CustomField>
    <fullName>Obstacles__c</fullName>
    <label>Obstacles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mur</fullName>
            </value>
            <value>
                <fullName>Palissade</fullName>
            </value>
            <value>
                <fullName>Haie</fullName>
            </value>
            <value>
                <fullName>Grillage</fullName>
            </value>
            <value>
                <fullName>Câbles électriques</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Aucun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>