unpackaged/main/default/objects/Contract/fields/Precisez_Hauteur_du_calage__c.field-meta.xml
<CustomField>
    <fullName>Precisez_Hauteur_du_calage__c</fullName>
    <label>Précisez, Hauteur du calage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>