unpackaged/main/default/objects/Contract/fields/Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat précédent</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contrats Prolongés / Renouvelés</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>