unpackaged/main/default/objects/Contract/fields/Prix_KM_supp_net__c.field-meta.xml
<CustomField>
    <fullName>Prix_KM_supp_net__c</fullName>
    <label>Prix KM supp net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>