unpackaged/main/default/objects/Contract/fields/Probabilite_signature__c.field-meta.xml
<CustomField>
    <fullName>Probabilite_signature__c</fullName>
    <label>Probabilite signature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20% (Peu probable)</fullName>
            </value>
            <value>
                <fullName>50% (Probable)</fullName>
            </value>
            <value>
                <fullName>80% (Très probable)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>