unpackaged/main/default/objects/Contract/fields/ReasonEndOfContract__c.field-meta.xml
<CustomField>
    <fullName>ReasonEndOfContract__c</fullName>
    <label>Motif de la Demande fin de contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Achat</fullName>
            </value>
            <value>
                <fullName>Concurrence</fullName>
            </value>
            <value>
                <fullName>Réduction</fullName>
            </value>
            <value>
                <fullName>Parc Client</fullName>
            </value>
            <value>
                <fullName>Cessation Relation</fullName>
            </value>
            <value>
                <fullName>Cessation Active</fullName>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Fin client</fullName>
                <isActive>false</isActive>
                <label>Fin client</label>
            </value>
            <value>
                <fullName>Plus besoin</fullName>
                <isActive>false</isActive>
                <label>Plus besoin</label>
            </value>
            <value>
                <fullName>Test</fullName>
                <isActive>false</isActive>
                <label>Test</label>
            </value>
            <value>
                <fullName>ll</fullName>
                <isActive>false</isActive>
                <label>ll</label>
            </value>
            <value>
                <fullName>try</fullName>
                <isActive>false</isActive>
                <label>try</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>