unpackaged/main/default/objects/Contract/fields/Remise__c.field-meta.xml
<CustomField>
    <fullName>Remise__c</fullName>
    <label>Remise (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>