unpackaged/main/default/objects/Contract/fields/Remise_KM_supp__c.field-meta.xml
<CustomField>
    <fullName>Remise_KM_supp__c</fullName>
    <label>Remise KM supp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>