unpackaged/main/default/objects/Contract/fields/SalesAreaData__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaData__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vue commerciale client sur la quelle le contrat a été créé.</description>
    <label>Vue Commerciale Client</label>
    <referenceTo>SalesAreaData__c</referenceTo>
    <relationshipLabel>Contrats</relationshipLabel>
    <relationshipName>Contrats</relationshipName>
    <type>Lookup</type>
</CustomField>