unpackaged/main/default/objects/Contract/fields/Sans_Assurance_RC__c.field-meta.xml
<CustomField>
    <fullName>Sans_Assurance_RC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sans Assurance RC</label>
    <type>Checkbox</type>
</CustomField>