unpackaged/main/default/objects/Contract/fields/SBQQ__AmendmentOpportunityRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AmendmentOpportunityRecordTypeId__c</fullName>
    <description>Record Type of the Amendment Opportunity, unless otherwise specified.</description>
    <inlineHelpText>Type d&#39;enregistrement de l&#39;opportunité d&#39;amendement, sauf indication contraire.</inlineHelpText>
    <label>Amendment Opportunity Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>