unpackaged/main/default/objects/Contract/fields/SBQQ__AmendmentStartDate__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__AmendmentStartDate__c</fullName>
    <description>Start Date of your Amendment. If blank, Amendment will start on today&#39;s date.</description>
    <inlineHelpText>Date de début de votre amendement. Si la date est vide, l&#39;amendement commence à la date du jour.</inlineHelpText>
    <label>Amendment Start Date</label>
    <type>Date</type>
</CustomField>