unpackaged/main/default/objects/Contract/fields/SBQQ__DisableAmendmentCoTerm__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DisableAmendmentCoTerm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If unchecked, the Amendment Quote End Date will be set according to the Amendment &amp; Renewal Behavior setting. If checked, then no End Date will be set.</description>
    <inlineHelpText>Si cette case n&#39;est pas sélectionnée, la date de fin du devis d&#39;amendement doit être définie conformément au paramètre Comportement d&#39;amendement et de renouvellement. Si elle est sélectionnée, aucune date de fin n&#39;est définie.</inlineHelpText>
    <label>Disable Amendment Co-Term</label>
    <type>Checkbox</type>
</CustomField>