unpackaged/main/default/objects/Contract/fields/SBQQ__MasterContract__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__MasterContract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to designate this contract as the master contract for this account. Upon renewal, all contracts will be rolled into this one.</description>
    <inlineHelpText>Sélectionnez cette case pour désigner ce contrat en tant que contrat principal de ce compte. Lors du renouvellement, tous les contrats sont cumulés dans celui-ci.</inlineHelpText>
    <label>Master Contract</label>
    <type>Checkbox</type>
</CustomField>