unpackaged/main/default/objects/Contract/fields/SBQQ__MDQRenewalBehavior__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__MDQRenewalBehavior__c</fullName>
    <description>Defines how segmented subscription products will appear on renewal quotes. De-Segmented will renew as a standard quote line with the last segment’s data.</description>
    <inlineHelpText>Définit l&#39;affichage des produits d&#39;abonnement segmentés dans les devis de renouvellement. Les produits désegmentés sont renouvelés en tant que ligne de devis standard avec les données du dernier segment.</inlineHelpText>
    <label>MDQ Renewal Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>De-segmented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>