unpackaged/main/default/objects/Contract/fields/SBQQ__Quote__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote from which this Contract was created.</description>
    <inlineHelpText>Devis à partir duquel ce contrat a été créé.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>