unpackaged/main/default/objects/Contract/fields/SBQQ__RenewalForecast__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to trigger the generation of a renewal opportunity for forecasting purposes. Does not automatically generate a renewal quote.</description>
    <inlineHelpText>Sélectionnez cette case pour déclencher la génération d&#39;une opportunité de renouvellement à des fins de prévision. Ne génère pas automatiquement un devis de renouvellement.</inlineHelpText>
    <label>Renewal Forecast</label>
    <type>Checkbox</type>
</CustomField>