unpackaged/main/default/objects/Contract/fields/SBQQ__RenewalOpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalOpportunityStage__c</fullName>
    <description>Override the default opportunity stage for this renewal. This must be done prior to selecting Renewal Forecast to take effect on the renewal opportunity.</description>
    <inlineHelpText>Remplace l&#39;étape de l&#39;opportunité par défaut pour ce renouvellement. Doit être effectué avant de sélectionner la prévision de renouvellement pour entrer en vigueur dans l&#39;opportunité de renouvellement.</inlineHelpText>
    <label>Renewal Opportunity Stage</label>
    <length>60</length>
    <type>Text</type>
</CustomField>