unpackaged/main/default/objects/Contract/fields/SBQQ__RenewalQuoted__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalQuoted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this option to automatically generate a renewal quote on renewal opportunities.</description>
    <inlineHelpText>Sélectionnez cette option pour générer automatiquement un devis de renouvellement dans les opportunités de renouvellement.</inlineHelpText>
    <label>Renewal Quoted</label>
    <type>Checkbox</type>
</CustomField>