unpackaged/main/default/objects/Contract/fields/SBQQ__SubscriptionQuantitiesCombined__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SubscriptionQuantitiesCombined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to combine quantities of Subscriptions for the same product into one line on Renewal Quotes and Legacy Amendments.</description>
    <inlineHelpText>Sélectionnez cette option pour combiner les quantités des abonnements à un même produit sur une seule ligne dans les devis de renouvellement et les amendements.</inlineHelpText>
    <label>Combine Subscription Quantities</label>
    <type>Checkbox</type>
</CustomField>