unpackaged/main/default/objects/Contract/fields/Sinistre__c.field-meta.xml
<CustomField>
    <fullName>Sinistre__c</fullName>
    <label>Sinistre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>